--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -208,6 +208,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
@@ -240,8 +241,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\CommerceContentExtensions.cs" />
     <Compile Include="Initialization\IndexEventInitialization.cs" />
+    <Compile Include="Jobs\SannsynOrderIndexer.cs" />
+    <Compile Include="Models\SannsynModel.cs" />
+    <Compile Include="Models\SannsynObjectModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ISannsynOrderIndexerService.cs" />
+    <Compile Include="Services\SannsynOrderIndexerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -249,8 +256,6 @@
     <None Include="web.config.install.xdt" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Jobs\" />
-    <Folder Include="Models\" />
     <Folder Include="Sannsyn\Scripts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
