--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -207,6 +207,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
