--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -209,10 +209,15 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Sites\CommerceStarterKit\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>$(SolutionDir)\packages\Microsoft.AspNet.Mvc.4.0.20710.0\lib\net40\System.Web.Mvc.dll</HintPath>
@@ -242,18 +247,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\NewsLetterMenuProvider.cs" />
+    <Compile Include="Admin\SannsynAdminController.cs" />
     <Compile Include="Extensions\CommerceContentExtensions.cs" />
     <Compile Include="Initialization\IndexEventInitialization.cs" />
-    <Compile Include="Jobs\SannsynOrderIndexer.cs" />
     <Compile Include="Models\SannsynModel.cs" />
     <Compile Include="Models\SannsynObjectModel.cs" />
+    <Compile Include="Models\ViewModels\SannsynAdminViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ISannsynOrderIndexerService.cs" />
     <Compile Include="Services\SannsynOrderIndexerService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="module.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="packages.config" />
     <None Include="Sannsyn.Episerver.Commerce.nuspec" />
+    <Content Include="Sannsyn\module.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Sannsyn\Views\_SannsynLayout.cshtml" />
+    <Content Include="Sannsyn\Views\SannsynAdmin\Index.cshtml" />
+    <Content Include="Sannsyn\Views\web.config" />
     <None Include="web.config.install.xdt" />
   </ItemGroup>
   <ItemGroup>
