Some refactoring, adding configuration and admin tool

--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -250,7 +250,8 @@
   <ItemGroup>
     <Compile Include="Admin\NewsLetterMenuProvider.cs" />
     <Compile Include="Admin\SannsynAdminController.cs" />
-    <Compile Include="ClientScripts\SannsynResourceRegister.cs" />
+    <Compile Include="ClientScriptRegistration\SannsynResourceRegister.cs" />
+    <Compile Include="Configuration\SannsynConfiguration.cs" />
     <Compile Include="Extensions\CommerceContentExtensions.cs" />
     <Compile Include="Initialization\IndexEventInitialization.cs" />
     <Compile Include="Models\SannsynModel.cs" />
