--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -250,6 +250,7 @@
   <ItemGroup>
     <Compile Include="Admin\NewsLetterMenuProvider.cs" />
     <Compile Include="Admin\SannsynAdminController.cs" />
+    <Compile Include="Admin\SannsynOverviewController.cs" />
     <Compile Include="ClientScriptRegistration\SannsynResourceRegister.cs" />
     <Compile Include="Configuration\SannsynConfiguration.cs" />
     <Compile Include="Extensions\CommerceContentExtensions.cs" />
@@ -273,6 +274,7 @@
     <Content Include="Sannsyn\Views\_SannsynLayout.cshtml" />
     <Content Include="Sannsyn\Views\SannsynAdmin\Index.cshtml" />
     <Content Include="Sannsyn\Views\web.config" />
+    <Content Include="Sannsyn\Views\SannsynOverview\Index.cshtml" />
     <None Include="web.config.install.xdt" />
   </ItemGroup>
   <ItemGroup>
