--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -251,6 +251,9 @@
     <Compile Include="Admin\NewsLetterMenuProvider.cs" />
     <Compile Include="Admin\SannsynAdminController.cs" />
     <Compile Include="Admin\SannsynOverviewController.cs" />
+    <Compile Include="Backend\BackendService.cs" />
+    <Compile Include="Models\SannsynRecommendModel.cs" />
+    <Compile Include="Models\ViewModels\SannsynOverviewViewModel.cs" />
     <Compile Include="Models\ViewModels\StatusObject.cs" />
     <Compile Include="ClientScriptRegistration\SannsynResourceRegister.cs" />
     <Compile Include="Configuration\SannsynConfiguration.cs" />
@@ -258,10 +261,13 @@
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Initialization\IndexEventInitialization.cs" />
     <Compile Include="Models\SannsynModel.cs" />
-    <Compile Include="Models\SannsynObjectModel.cs" />
+    <Compile Include="Models\SannsynUpdateEntityModel.cs" />
     <Compile Include="Models\ViewModels\SannsynAdminViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CustomerService.cs" />
+    <Compile Include="Services\ICurrentCustomerService.cs" />
     <Compile Include="Services\ISannsynOrderIndexerService.cs" />
+    <Compile Include="Services\RecommendationService.cs" />
     <Compile Include="Services\SannsynOrderIndexerService.cs" />
   </ItemGroup>
   <ItemGroup>
