--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -248,7 +248,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin\NewsLetterMenuProvider.cs" />
+    <Compile Include="Admin\SannsynMenuProvider.cs" />
     <Compile Include="Admin\SannsynAdminController.cs" />
     <Compile Include="Admin\SannsynOverviewController.cs" />
     <Compile Include="Backend\BackendService.cs" />
@@ -265,7 +265,7 @@
     <Compile Include="Models\SannsynUpdateEntityModel.cs" />
     <Compile Include="Models\ViewModels\SannsynAdminViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\CustomerService.cs" />
+    <Compile Include="Services\CurrentCustomerService.cs" />
     <Compile Include="Services\ICurrentCustomerService.cs" />
     <Compile Include="Services\IRecommendationService.cs" />
     <Compile Include="Services\ISannsynOrderIndexerService.cs" />
