--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -255,8 +255,9 @@
     <Compile Include="Extensions\LineItemExtensions.cs" />
     <Compile Include="Models\SannsynDdsModel.cs" />
     <Compile Include="Models\SannsynRecommendModel.cs" />
+    <Compile Include="Models\SannsynServiceStartStopModel.cs" />
     <Compile Include="Models\ViewModels\SannsynOverviewViewModel.cs" />
-    <Compile Include="Models\ViewModels\StatusObject.cs" />
+    <Compile Include="Models\SannsynServiceStatusModel.cs" />
     <Compile Include="ClientScriptRegistration\SannsynResourceRegister.cs" />
     <Compile Include="Configuration\SannsynConfiguration.cs" />
     <Compile Include="Extensions\CommerceContentExtensions.cs" />
@@ -266,6 +267,7 @@
     <Compile Include="Models\SannsynUpdateEntityModel.cs" />
     <Compile Include="Models\ViewModels\SannsynAdminViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ISannsynAdminService.cs" />
     <Compile Include="Services\ISannsynUpdateService.cs" />
     <Compile Include="Services\SannsynCatalogIndexService.cs" />
     <Compile Include="Services\CurrentCustomerService.cs" />
@@ -275,6 +277,7 @@
     <Compile Include="Services\ISannsynOrderIndexerService.cs" />
     <Compile Include="Services\RecommendationService.cs" />
     <Compile Include="Services\SannsynOrderIndexerService.cs" />
+    <Compile Include="Services\SannsynAdminService.cs" />
     <Compile Include="Services\SannsynUpdateService.cs" />
   </ItemGroup>
   <ItemGroup>
