--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.nuspec
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.nuspec
@@ -15,7 +15,7 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="sannsyn\**\*.*" target="content\sannsyn\" />
+        <file src="sannsyn\**\*.*" target="content\modules\_protected\Sannsyn\" />
         <!-- Configuration -->
         <!--<file src="web.config.install.xdt"
               target="content" />-->
