Revert "Cleaning up for package release"
This reverts commit f9ca6c490d2f1f79e2e9f9344a1bd14a63a11e2b.

--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.nuspec
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.nuspec
@@ -15,7 +15,7 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="sannsyn\**\*.*" target="content\modules\_protected\Sannsyn\" />
+        <file src="sannsyn\**\*.*" target="content\sannsyn\" />
         <!-- Configuration -->
         <!--<file src="web.config.install.xdt"
               target="content" />-->
