Track product, not variation
Will try to load the parent product of any variation and track that one
instead. Recommendations should be on product level (given the catalog
has a product -> variation structure) If no parent product is found, the
variation is tracked.

--- a/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
+++ b/src/Sannsyn.Episerver.Commerce/Sannsyn.Episerver.Commerce.csproj
@@ -252,6 +252,8 @@
     <Compile Include="Admin\SannsynAdminController.cs" />
     <Compile Include="Admin\SannsynOverviewController.cs" />
     <Compile Include="Backend\BackendService.cs" />
+    <Compile Include="ClientScriptRegistration\ClientScriptFactory.cs" />
+    <Compile Include="ClientScriptRegistration\IClientScriptFactory.cs" />
     <Compile Include="Tracking\ExposedRecommendationsScript.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Extensions\LineItemExtensions.cs" />
