--- a/src/Sannsyn.Episerver.Commerce/packages.config
+++ b/src/Sannsyn.Episerver.Commerce/packages.config
@@ -4,6 +4,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="EPiServer.CMS.Core" version="10.0.1" targetFramework="net452" />
+  <package id="EPiServer.CMS.UI.Core" version="10.0.2" targetFramework="net452" />
   <package id="EPiServer.Commerce.Core" version="10.0.0" targetFramework="net452" />
   <package id="EPiServer.Framework" version="10.0.1" targetFramework="net452" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
