--- a/src/Sannsyn.Episerver.Commerce/packages.config
+++ b/src/Sannsyn.Episerver.Commerce/packages.config
@@ -3,12 +3,12 @@
   <package id="AuthorizeNet" version="1.9.4" targetFramework="net462" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net462" />
-  <package id="EPiServer.CMS.AspNet" version="11.7.1" targetFramework="net462" />
-  <package id="EPiServer.CMS.Core" version="11.7.1" targetFramework="net462" />
-  <package id="EPiServer.CMS.UI.Core" version="11.4.5" targetFramework="net462" />
-  <package id="EPiServer.Commerce.Core" version="12.2.0" targetFramework="net462" />
-  <package id="EPiServer.Framework" version="11.7.1" targetFramework="net462" />
-  <package id="EPiServer.Framework.AspNet" version="11.7.1" targetFramework="net462" />
+  <package id="EPiServer.CMS.AspNet" version="11.12.0" targetFramework="net462" />
+  <package id="EPiServer.CMS.Core" version="11.12.0" targetFramework="net462" />
+  <package id="EPiServer.CMS.UI.Core" version="11.20.1" targetFramework="net462" />
+  <package id="EPiServer.Commerce.Core" version="13.3.1" targetFramework="net462" />
+  <package id="EPiServer.Framework" version="11.12.0" targetFramework="net462" />
+  <package id="EPiServer.Framework.AspNet" version="11.12.0" targetFramework="net462" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net462" />
@@ -21,10 +21,11 @@
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net462" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.AccessControl" version="4.4.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.Xml" version="4.4.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Xml" version="4.4.2" targetFramework="net462" />
   <package id="System.Security.Permissions" version="4.4.0" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net462" />
   <package id="System.Threading.AccessControl" version="4.4.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
   <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net452" />
   <package id="structuremap-signed" version="3.1.6.186" targetFramework="net452" />
 </packages>
